added maxCapacity on UnDoManager constructor (fix #4)

--- a/source/DefaultUnDo/DefaultUnDo.Release.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.Release.csproj
@@ -17,6 +17,7 @@
     <Version>0.1.0</Version>
     <PackageReleaseNotes>
 added Description property on IUnDo
+added maxCapacity on UnDoManager constructor
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
