finished mergeability of IUnDo (fix #3)

--- a/source/DefaultUnDo/DefaultUnDo.Release.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.Release.csproj
@@ -18,6 +18,7 @@
     <PackageReleaseNotes>
 added Description property on IUnDo
 added maxCapacity on UnDoManager constructor
+added IMergeableUnDo interface for mergeable operation
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
