changed AsUnDo extension methods description factory to take a UnDoCollectionOperation

--- a/source/DefaultUnDo/DefaultUnDo.Release.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.Release.csproj
@@ -18,6 +18,7 @@
     <PackageReleaseNotes>
 breaking changes:
 changed description from string to object
+changed AsUnDo extension methods description factory to take an UnDoCollectionOperation
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
