--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: '5.0.100'
         source-url: https://api.nuget.org/v3/index.json
       env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
       
     - name: Decrypte snk file
       env:
@@ -25,15 +25,15 @@ jobs:
       run: gpg --quiet --batch --yes --decrypt --passphrase="$env:SNK_KEY" --output ds.snk ds.snk.gpg
 
     - name: Create package
-      run: dotnet pack source\DefaultUnDo\DefaultUnDo.Release.csproj -c Release -o package /p:Version=${{ github.event.release.tag_name }}
+      run: dotnet pack source\DefaultUnDo\DefaultUnDo.csproj -c Release -o package /p:Version=${{ github.event.release.tag_name }}
 
     - name: Create NEW_RELEASENOTES.txt
       run: |
-        "echo ## DefaultUnDo ${{ github.event.release.tag_name }}> package/NEW_RELEASENOTES.txt"
-        "type documentation/NEXT_RELEASENOTES.txt >> package/NEW_RELEASENOTES.txt"
-        "echo.>> package/NEW_RELEASENOTES.txt"
-        "echo.>> package/NEW_RELEASENOTES.txt"
-        "echo [nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})>> package/NEW_RELEASENOTES.txt"
+        "echo ## DefaultUnDo ${{ github.event.release.tag_name }}> package\NEW_RELEASENOTES.txt"
+        "type documentation\NEXT_RELEASENOTES.txt >> package\NEW_RELEASENOTES.txt"
+        "echo.>> package\NEW_RELEASENOTES.txt"
+        "echo.>> package\NEW_RELEASENOTES.txt"
+        "echo [nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})>> package\NEW_RELEASENOTES.txt"
 
     - name: Update release
       uses: tubone24/update_release@v1.0
@@ -44,10 +44,10 @@ jobs:
         
     - name: Update RELEASENOTES.md
       run: |
-        "echo.>> package/NEW_RELEASENOTES.txt"
-        "type documentation\RELEASENOTES.md >> package/NEW_RELEASENOTES.txt"
-        "type package/NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md"
-        "echo.> documentation/NEXT_RELEASENOTES.txt"
+        "echo.>> package\NEW_RELEASENOTES.txt"
+        "type documentation\RELEASENOTES.md >> package\NEW_RELEASENOTES.txt"
+        "type package\NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md"
+        "echo.> documentation\NEXT_RELEASENOTES.txt"
 
     - name: Publish package
       run: nuget push package\*.nupkg
