--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,8 +16,6 @@ jobs:
       with:
         dotnet-version: '5.0.100'
         source-url: https://api.nuget.org/v3/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
       
     - name: Decrypte snk file
       env:
@@ -36,7 +34,7 @@ jobs:
         "echo [nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})>> package\NEW_RELEASENOTES.txt"
 
     - name: Update release
-      uses: tubone24/update_release@v1.0
+      uses: tubone24/update_release@v1.1.0
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
@@ -50,7 +48,7 @@ jobs:
         "echo.> documentation\NEXT_RELEASENOTES.txt"
 
     - name: Publish package
-      run: nuget push package\*.nupkg
+      run: dotnet nuget push package\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
     - name: Commit RELEASENOTES and documentation api
       run: |
