--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -29,25 +29,26 @@ jobs:
 
     - name: Create NEW_RELEASENOTES.txt
       run: |
-        echo ## DefaultUnDo ${{ github.event.release.tag_name }}> package\NEW_RELEASENOTES.txt
-        type documentation\NEXT_RELEASENOTES.txt >> package\NEW_RELEASENOTES.txt
-        echo.>> package\NEW_RELEASENOTES.txt
-        echo.>> package\NEW_RELEASENOTES.txt
-        echo [nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})>> package\NEW_RELEASENOTES.txt
+        'echo ## DefaultUnDo ${{ github.event.release.tag_name }}> package\NEW_RELEASENOTES.txt'
+        'type documentation\NEXT_RELEASENOTES.txt >> package\NEW_RELEASENOTES.txt'
+        'echo.>> package\NEW_RELEASENOTES.txt'
+        'echo.>> package\NEW_RELEASENOTES.txt'
+        'echo [nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})>> package\NEW_RELEASENOTES.txt'
 
     - name: Update release
       uses: tubone24/update_release@v1.1.0
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
+        release_name: DefaultUnDo ${{ github.event.release.tag_name }}
         body_path: package\NEW_RELEASENOTES.txt
         
     - name: Update RELEASENOTES.md
       run: |
-        echo.>> package\NEW_RELEASENOTES.txt
-        type documentation\RELEASENOTES.md >> package\NEW_RELEASENOTES.txt
-        type package\NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md
-        echo.> documentation\NEXT_RELEASENOTES.txt
+        'echo.>> package\NEW_RELEASENOTES.txt'
+        'type documentation\RELEASENOTES.md >> package\NEW_RELEASENOTES.txt'
+        'type package\NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md'
+        'echo.> documentation\NEXT_RELEASENOTES.txt'
 
     - name: Publish package
       run: dotnet nuget push package\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
