--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -29,13 +29,11 @@ jobs:
 
     - name: Create NEW_RELEASENOTES.txt
       run: |
-        echo "## DefaultUnDo ${{ github.event.release.tag_name }}"> package\NEW_RELEASENOTES.txt
-        type documentation\NEXT_RELEASENOTES.txt >> package\NEW_RELEASENOTES.txt
-        echo.>> package\NEW_RELEASENOTES.txt
-        echo.>> package\NEW_RELEASENOTES.txt
-        echo "[nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})">> package\NEW_RELEASENOTES.txt
-        type package\NEW_RELEASENOTES.txt
-        echo kikoo
+        echo "## DefaultUnDo ${{ github.event.release.tag_name }}" | Out-File package\NEW_RELEASENOTES.txt
+        type documentation\NEXT_RELEASENOTES.txt | Out-File package\NEW_RELEASENOTES.txt -Append
+        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
+        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
+        echo "[nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})" | Out-File package\NEW_RELEASENOTES.txt -Append
 
     - name: Update release
       uses: tubone24/update_release@v1.1.0
@@ -47,10 +45,10 @@ jobs:
         
     - name: Update RELEASENOTES.md
       run: |
-        echo.>> package\NEW_RELEASENOTES.txt
-        type documentation\RELEASENOTES.md >> package\NEW_RELEASENOTES.txt
-        type package\NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md
-        echo.> documentation\NEXT_RELEASENOTES.txt
+        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
+        type documentation\RELEASENOTES.md | Out-File package\NEW_RELEASENOTES.txt -Append
+        type package\NEW_RELEASENOTES.txt | Out-File documentation\RELEASENOTES.md -Append
+        echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
 
     - name: Publish package
       run: dotnet nuget push package\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
