--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Run tests net48
       run: dotnet test source\DefaultUnDo.Test\DefaultUnDo.Test.csproj -c Release -f net48 /p:TEST=true
 
-    - name: Run tests netcoreapp3.0
-      run: dotnet test source\DefaultUnDo.Test\DefaultUnDo.Test.csproj -c Release -f netcoreapp3.0 /p:TEST=true
+    - name: Run tests net5.0
+      run: dotnet test source\DefaultUnDo.Test\DefaultUnDo.Test.csproj -c Release -f net5.0 /p:TEST=true
