--- a/source/DefaultUnDo.Test/DefaultUnDo.Test.csproj
+++ b/source/DefaultUnDo.Test/DefaultUnDo.Test.csproj
@@ -7,18 +7,10 @@
       netcoreapp3.1;
       net5.0;
     </TargetFrameworks>
-    <DefineConstants></DefineConstants>
-    <Optimize>true</Optimize>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Configurations>Debug;Release</Configurations>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="3.0.3" />
     <PackageReference Include="NFluent" Version="2.6.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -27,11 +19,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DefaultUnDo\DefaultUnDo.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="xunit.runner.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
