--- a/source/DefaultUnDo/DefaultUnDo.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.csproj
@@ -5,14 +5,8 @@
       netstandard1.0;
       netstandard2.0;
     </TargetFrameworks>
-    <Optimize>true</Optimize>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DefaultDocumentationFolder>..\..\documentation\api</DefaultDocumentationFolder>
-  </PropertyGroup>
-
-  <PropertyGroup Label="Debug" Condition="'$(Configuration)'=='Debug'">
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,7 +26,7 @@
     <Description>Undo/redo library aiming for ease of integration and usage simplicity.</Description>
     <PackageIcon>logo.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Doraku/DefaultUnDo</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Doraku/DefaultUnDo.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>command-pattern memento-pattern undo-redo</PackageTags>
