--- a/source/DefaultUnDo/DefaultUnDo.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Compilation">
     <TargetFrameworks>
-      netstandard1.0;
-      netstandard2.0;
-    </TargetFrameworks>
+	  netstandard1.0;
+	  netstandard2.0;
+	  netstandard2.1;
+	</TargetFrameworks>
+	<Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DefaultDocumentationFolder>..\..\documentation\api</DefaultDocumentationFolder>
     <DefaultDocumentationFileNameMode>Name</DefaultDocumentationFileNameMode>
@@ -13,11 +15,12 @@
 
   <ItemGroup>
     <None Include="..\..\image\logo.png" Pack="true" PackagePath="\" Visible="false" />
+    <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DefaultDocumentation" Version="0.7.9" PrivateAssets="all" Condition="'$(GITHUB_ACTIONS)' == 'true' AND '$(TEST)' != 'true' AND '$(CI_VERSION)' != 'true'" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
   <PropertyGroup Label="Package">
