--- a/source/DefaultUnDo/DefaultUnDo.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup Label="Compilation">
     <TargetFrameworks>
       netstandard1.0;
+      netstandard2.0;
       netstandard2.1;
       net8.0;
     </TargetFrameworks>
