--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -8,13 +8,9 @@ jobs:
   release:
     runs-on: windows-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        ref: master
+    - uses: actions/checkout@v4
 
-    - name: Set up dotnet
-      uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
         source-url: https://api.nuget.org/v3/index.json
@@ -26,21 +22,23 @@ jobs:
         SNK_KEY: ${{ secrets.SNK_KEY }}
       run: gpg --quiet --batch --yes --decrypt --passphrase="$env:SNK_KEY" --output ds.snk ds.snk.gpg
 
-    - name: Create package
-      run: dotnet pack source\DefaultUnDo\DefaultUnDo.csproj -c Release -o build /p:Version=${{ github.event.release.tag_name }}
+    - name: Create packages
+      run: |
+        dotnet pack source -c Release -o build /p:Version=${{ github.event.release.tag_name }} /p:SignAssembly=true /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
 
     - name: Create RELEASE.txt
       run: |
         type documentation\NEXT_RELEASENOTES.txt | Out-File build\RELEASE.txt
         echo "" | Out-File build\RELEASE.txt -Append
         echo "[nuget package](https://www.nuget.org/packages/DefaultUnDo/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
-
+        
     - name: Update release
-      uses: tubone24/update_release@v1.1.0
+      uses: tubone24/update_release@v1.3.1
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         release_name: DefaultUnDo ${{ github.event.release.tag_name }}
+        prerelease: ${{ contains(github.event.release.tag_name, '-') }}
         body_path: .\build\RELEASE.txt
         
     - name: Clear NEXT_RELEASENOTES.txt
