--- a/source/DefaultUnDo.Test/DefaultUnDo.Test.csproj
+++ b/source/DefaultUnDo.Test/DefaultUnDo.Test.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>
       net462;
       net48;
-      net8.0;
+      net9.0;
     </TargetFrameworks>
     <RootNamespace>DefaultUnDo</RootNamespace>
     
@@ -20,7 +20,8 @@
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
 
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" Condition="$(TargetFramework) != 'net8.0'" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
     
     <PackageReference Include="coverlet.msbuild" Version="6.0.2" PrivateAssets="all" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" PrivateAssets="all" />
