--- a/source/DefaultUnDo/DefaultUnDo.csproj
+++ b/source/DefaultUnDo/DefaultUnDo.csproj
@@ -6,6 +6,7 @@
       netstandard2.0;
       netstandard2.1;
       net8.0;
+      net9.0;
     </TargetFrameworks>
     <Nullable>enable</Nullable>
 
@@ -16,8 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DefaultDocumentation" Version="1.0.0-beta04" PrivateAssets="all" Condition="'$(Version)' != '0.0.0' AND '$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="DefaultDocumentation" Version="1.0.0-beta04" PrivateAssets="all" Condition="'$(Version)' != '0.0.0' AND '$(TargetFramework)' == 'net9.0'" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="System.Memory" Version="4.6.0" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
   </ItemGroup>
   
 </Project>
