--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -6,8 +6,7 @@ on:
       - master
     paths:
       - '.github/workflows/CodeCoverage.yml'
-      - 'source/DefaultUnDo/**'
-      - 'source/DefaultUnDo.Test/**'
+      - 'source/**'
       
 jobs:
   code_coverage:
