--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - '.github/workflows/ContinuousIntegration.yml'
       - 'source/DefaultUnDo/**'
+      - 'source/Directory.Build.props'
       
 jobs:
   continuous_integration:
