--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -18,9 +18,6 @@ jobs:
     - uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x'
-        source-url: https://nuget.pkg.github.com/Doraku/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Build
       run: dotnet build source -c Release -p:TreatWarningsAsErrors=true
@@ -40,4 +37,4 @@ jobs:
       run: dotnet pack source -c Release -o build /p:Version=0-ci$(date +'%Y%m%d%H%M%S') /p:SignAssembly=true
 
     - name: Publish packages
-      run: dotnet nuget push build\*.nupkg
+      run: dotnet nuget push build\*.nupkg --api-key ${{ github.token }} --source https://nuget.pkg.github.com/Doraku/index.json
